Rorato/src/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_Of_Employees__c</fullName>
        <label>Number Of Employees</label>
        <summaryForeignKey>Employee_Skills__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Lead</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Technologies__c</fullName>
        <label>Technologies</label>
        <picklist>
            <picklistValues>
                <fullName>Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>.NET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SalesForce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ruby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Node.js</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HTML</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JavaScript</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>